# chase-icing

./: CMakeLists.txt  LICENSE.md  README.md
data/: ICING BE SI Data.csv
include/: .InverseCDFProcess.hpp.swp  ChaseIcing.hpp  Interpolator.hpp  InverseCDFProcess.hpp  XYParser.hpp  icing.h
lib/: .InverseCDFProcess.cpp.swp  CMakeLists.txt  Interpolator.cpp  InverseCDFProcess.cpp  icing.cpp
test/: .test_icing.cpp.swp  flameo-hotman  plot_histogram.py  test_icing.cpp
